# Avalon

./: .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  appveyor.yml  clear_cmake.sh
include/Avalon/: .loop.hpp.swp  concept.hpp  const.hpp  const_string.hpp  range.hpp  tuple.hpp  util.hpp  vector.hpp
include/Avalon/algo/: circular_count.hpp
include/Avalon/concept/: convertible.hpp  core.hpp  expr_validator.hpp  has_requires.hpp  iterator.hpp  lvalue_reference.hpp  reference.hpp  rvalue_reference.hpp  same.hpp  static_castable.hpp  static_castible.hpp
include/Avalon/fs/: dir.hpp
include/Avalon/mpl/: apply.hpp  elder_type.hpp  integer_sequence.hpp  latest_parents.hpp  loop.hpp  string.hpp  type.hpp
include/Avalon/mpl/loop/: foreach.hpp  foreach_exec.hpp  impl.hpp  tuple_foreach.hpp
include/Avalon/parallel/: thread_pool.hpp
include/Avalon/parallel/algo/schedule/: round_robin.hpp
include/Avalon/parallel/model/distsys/: future.hpp  service.hpp  task.hpp  type_config.hpp
include/Avalon/parallel/model/distsys/helper/: get_id.hpp  get_id_type.hpp  yield.hpp
include/Avalon/parallel/range/: transform.hpp
include/Avalon/parallel/thread_pool/: task.hpp  thread_container.hpp  work.hpp
include/Avalon/parallel/thread_pool/.trash/: future.hpp
include/Avalon/range/: auto_ref_storage.hpp  concept.hpp  core.hpp  forward.hpp  iterator_tag_order.hpp  pipe_operator.hpp  transform.hpp
include/Avalon/tuple/: forward.hpp  head.hpp  make_tuple.hpp  pop_front.hpp  tail.hpp
include/Avalon/type_traits/: const_trans.hpp  pointer.hpp  ref_trans.hpp  volitile_trans.hpp
include/Avalon/util/: core.hpp  fwd.hpp  language.hpp  logger.hpp  mutable.hpp  print_type.hpp  storage.hpp
include/Avalon/util/language/: class.hpp  dir.hpp  function_alias.hpp
include/Avalon/util/logger/: engine.hpp  null_buffer.hpp  ostream_adapter.hpp
lib/cmake/: boost.cmake  gtest.cmake
lib/cmake/unit_test/: const_string_test.cmake  logger_test.cmake  loop_test.cmake  sdl_hello_world_test.cmake
lib/cmake/unit_test/Avalon/: concept.cmake  const_string.cmake  range.cmake  tuple.cmake
lib/cmake/unit_test/Avalon/mpl/: loop.cmake
lib/cmake/unit_test/Avalon/parallel/: thread_pool.cmake
lib/cmake/unit_test/Avalon/parallel/algo/scheduler/: round_robin.cmake
lib/cmake/unit_test/Avalon/parallel/range/: transform.cmake
lib/cmake/unit_test/Avalon/util/: logger.cmake
lib/cmake/unit_test/SDL2/: hello_world.cmake
share/: AvalonConfig.cmake
super/: CMakeLists.txt
unit_test/Avalon/: concept.cpp  const_string.cpp  const_string_test.cpp  logger_test.cpp  range.cpp  tuple.cpp
unit_test/Avalon/mpl/: loop.cpp
unit_test/Avalon/parallel/: thread_pool.cpp
unit_test/Avalon/parallel/algo/schedule/: round_robin.cpp
unit_test/Avalon/parallel/range/: transform.cpp
unit_test/Avalon/parallel/view/: transform.cpp
unit_test/Avalon/util/: logger.cpp
unit_test/LibClang/: hello_world_test.cpp
unit_test/RangeV3/: string_range.cpp
unit_test/SDL2/: hello_world_test.cpp
unit_test/mpl/: loop_test.cpp
